Added espresso_machine automation

--- a/automations.yaml
+++ b/automations.yaml
@@ -1,1 +1,10 @@
-[]
+- id: espresso_machine
+  alias: 'Espresso Machine'
+  trigger:
+    - platform: time
+      at: '15:00'
+    - platform: time
+      at: '06:50:00'
+  action:
+    service_template: "switch.turn_{{ 'on' if trigger.now.hour == 6 else 'off' }}"
+    entity_id: switch.espresso_machine
