moved espresso_machine automation to dir

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -36,5 +36,5 @@ tts:
   - platform: google
 
 group: !include groups.yaml
-automation: !include automations.yaml
+automation: !include_dir_merge_list automation
 script: !include scripts.yaml
