--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -3,3 +3,5 @@ latitude: 00.000000
 longitude: -00.000000
 elevation: 0000
 time_zone: America/Denver
+nest_client_id: xxxxxxxxxxxxxxxx
+nest_client_secret: xxxxxxxxxxxxxxxxxxxxxx
