--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,31 @@
-# Example .gitignore file for your config dir.
-
-# Ignore folders.
-.storage
+*.pid
+*.xml
+*.csr
+*.crt
+*.key
+*.conf
+*.pickle
 .cloud
-.google.token
-
-# Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
-ip_bans.yaml
+.storage
+.uuid
+core.*
+OZW_Log.txt
+home-assistant.log
+home-assistant_v2.db
+*.db-journal
+*.db-shm
+*.db-wal
+*.sqlite
+deps
+__pycache__
+tts
 secrets.yaml
+secrets
 known_devices.yaml
+phue.conf
+ios.conf
+pyozw.sqlite
+nest.conf
+ipchange.yaml
+ip_bans.yaml
+production_auth.json
