--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -5,3 +5,5 @@ elevation: 0000
 time_zone: America/Denver
 nest_client_id: xxxxxxxxxxxxxxxx
 nest_client_secret: xxxxxxxxxxxxxxxxxxxxxx
+ssl_key: xxxxxxxxxxxxxxxx
+ssl_certificate: xxxxxxxxxxxxxxxxx
