--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "3.6.4"
 before_install:
+  - touch fake_key.pem
   - mv travis_secrets.yaml secrets.yaml
 install:
   - pip3 install homeassistant
