--- a/configuration.yaml
+++ b/configuration.yaml
@@ -42,13 +42,16 @@ nest:
 climate:
   platform: nest
 
-group: !include_dir_merge_list group
-automation: !include_dir_merge_list automation
-script: !include_dir_merge_list script
-
 http:
   ssl_certificate: !secret ssl_certificate
   ssl_key: !secret ssl_key
 
+mqtt:
+
 device_tracker:
   - platform: owntracks
+
+group: !include_dir_merge_list group
+automation: !include_dir_merge_list automation
+script: !include_dir_merge_list script
+
