--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -7,3 +7,4 @@ nest_client_id: xxxxxxxxxxxxxxxx
 nest_client_secret: xxxxxxxxxxxxxxxxxxxxxx
 ssl_certificate: fake_key.pem
 ssl_key: fake_key.pem
+darksky_api_key: xxxxxxxxxxxxxxxxxxxxxx
