--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -2,7 +2,7 @@
 latitude: 00.000000
 longitude: -00.000000
 elevation: 0000
-time_zone: America/New York
+time_zone: America/Denver
 nest_client_id: xxxxxxxxxxxxxxxxxxxxxx
 nest_client_secret: xxxxxxxxxxxxxxxxxxxxxx
 ssl_certificate: fake_key.pem
