--- a/configuration.yaml
+++ b/configuration.yaml
@@ -56,7 +56,7 @@ device_tracker:
   - platform: owntracks
 
 recorder: !include recorder.yaml
-
+logger: !include logger.yaml
 sensor: !include_dir_merge_list sensor
 group: !include_dir_merge_list group
 automation: !include_dir_merge_list automation
