--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -9,3 +9,6 @@ ssl_certificate: fake_key.pem
 ssl_key: fake_key.pem
 darksky_api_key: xxxxxxxxxxxxxxxxxxxxxx
 database_connection: xxxxxxxxxxxxxxxxxxxxxx
+mopar_user: xxxxxxxxxxxxxxxxxxxxxx
+mopar_password: xxxxxxxxxxxxxxxxxxxxxx
+uconnect_pin: xxxxxxxxxxxxxxxxxxxxxx
