--- a/configuration.yaml
+++ b/configuration.yaml
@@ -40,6 +40,11 @@ nest:
 climate:
   platform: nest
 
+mopar:
+  username: !secret mopar_user
+  password: !secret mopar_password
+  pin: !secret uconnect_pin
+
 http:
   ssl_certificate: !secret ssl_certificate
   ssl_key: !secret ssl_key
