--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -11,4 +11,4 @@ darksky_api_key: xxxxxxxxxxxxxxxxxxxxxx
 database_connection: xxxxxxxxxxxxxxxxxxxxxx
 mopar_user: xxxxxxxxxxxxxxxxxxxxxx
 mopar_password: xxxxxxxxxxxxxxxxxxxxxx
-uconnect_pin: xxxxxxxxxxxxxxxxxxxxxx
+uconnect_pin: 0000
