added home zone

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -1,7 +1,7 @@
 # Use this file to store secrets like usernames and passwords.
-latitude: 00.000000
-longitude: -00.000000
-elevation: 0000
+home_latitude: 00.000000
+home_longitude: -00.000000
+home_elevation: 0000
 time_zone: America/Denver
 nest_client_id: xxxxxxxxxxxxxxxxxxxxxx
 nest_client_secret: xxxxxxxxxxxxxxxxxxxxxx
