--- a/configuration.yaml
+++ b/configuration.yaml
@@ -50,6 +50,9 @@ http:
   ssl_key: !secret ssl_key
   login_attempts_threshold: 3
 
+updater:
+  include_used_components: true
+
 mqtt:
   broker: 127.0.0.1
 
