--- a/configuration.yaml
+++ b/configuration.yaml
@@ -19,14 +19,11 @@ default_config:
 # Show the introduction message on startup.
 introduction:
 
-# Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-# http:
-#   base_url: example.duckdns.org:8123
-
 # Discover some devices automatically
 discovery:
 
 ios:
+
 map:
 
 # Text to speech
@@ -49,6 +46,7 @@ http:
   ssl_certificate: !secret ssl_certificate
   ssl_key: !secret ssl_key
   login_attempts_threshold: 3
+  base_url: !secret ha_url
 
 updater:
   include_used_components: true
