--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -12,3 +12,4 @@ database_connection: xxxxxxxxxxxxxxxxxxxxxx
 mopar_user: xxxxxxxxxxxxxxxxxxxxxx
 mopar_password: xxxxxxxxxxxxxxxxxxxxxx
 uconnect_pin: 0000
+ha_url: xxxxx.duckdns.org:8123
