Added music card

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,7 +7,7 @@ homeassistant:
   time_zone: !secret time_zone
   customize: !include customize.yaml
 
-  
+
   # Configure a default setup of Home Assistant (frontend, api, etc)
 default_config:
 
@@ -51,6 +51,9 @@ mqtt:
 
 device_tracker:
   - platform: owntracks
+
+lovelace:
+  mode: yaml
 
 recorder: !include recorder.yaml
 logger: !include logger.yaml
