--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -15,3 +15,5 @@ views:
             name: Sonos Office
           - entity_id: media_player.master_bedroom
             name: Sonos Master bedroom
+          - entity_id: media_player.dinning_room
+            name: Sonos Dining room
