--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -13,3 +13,5 @@ mopar_user: xxxxxxxxxxxxxxxxxxxxxx
 mopar_password: xxxxxxxxxxxxxxxxxxxxxx
 uconnect_pin: 0000
 ha_url: xxxxx.duckdns.org:8123
+MQTT_username: xxxxxxxxxxxxxxxxxxxxxx
+MQTT_password: xxxxxxxxxxxxxxxxxxxxxx
