--- a/sensor/darksky.yaml
+++ b/sensor/darksky.yaml
@@ -1,6 +1,7 @@
  # Weather prediction
   - platform: darksky
     api_key: !secret darksky_api_key
+    update_interval: '00:05:00'
     monitored_conditions: 
      - summary
      - icon
