--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -9,6 +9,8 @@ resources:
     type: module
   - url: /local/simple-thermostat.js
     type: module
+  - url: /customcards/github/maykar/compact-custom-header.js?track=true
+    type: module
 
 
 views:
@@ -53,14 +55,14 @@ views:
       - type: vertical-stack
         cards:
           - type: custom:simple-weather-card
-            entity: weather.dark_sky
+            entity: weather.darksky
             name: " "
             secondary_info: humidity
             backdrop:
               day: "#2980b9"
               night: "#022F4C"
 #          - type: weather-forecast
-#            entity: weather.dark_sky
+#            entity: weather.darksky
           - type: horizontal-stack
             cards:
               - type: custom:mini-graph-card
@@ -72,7 +74,7 @@ views:
               - type: custom:mini-graph-card
                 name: Chance of Rain
                 entities:
-                  - sensor.dark_sky_precip_probability
+                  - sensor.darksky_precip_probability
                 line_color: '#2980b9'
                 line_width: 4
   - path: livingroom
