--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -15,3 +15,7 @@ uconnect_pin: 0000
 ha_url: xxxxx.duckdns.org:8123
 MQTT_username: xxxxxxxxxxxxxxxxxxxxxx
 MQTT_password: xxxxxxxxxxxxxxxxxxxxxx
+honeywell_username: xxxxxxxxxxxxxxxxxxxxxx
+honeywell_password: xxxxxxxxxxxxxxxxxxxxxx
+myq_username: xxxxxxxxxxxxxxxxxxxxxx
+myq_password: xxxxxxxxxxxxxxxxxxxxxx
