--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -70,7 +70,7 @@ views:
               - type: custom:mini-graph-card
                 entities:
                   - sensor.downstairs_thermostat_temperature
-                name: Downstairs
+                name: Great Room
                 line_color: '#2980b9'
                 line_width: 6
               
