--- a/group/media_players.yaml
+++ b/group/media_players.yaml
@@ -1,6 +1,7 @@
 media_players:  
   entities:
     - media_player.office
-    - media_player.living_room
-    - media_player.dinning_room
+    - media_player.great_room
+    - media_player.loft
     - media_player.master_bedroom
+    - media_player.kitchen
