--- a/configuration.yaml
+++ b/configuration.yaml
@@ -36,7 +36,7 @@ cover:
   - platform: myq
     username: myq_username
     password: myq_password
-    type: chamberlain
+    type: liftmaster
 
 mopar:
   username: !secret mopar_user
