moved network key

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -45,6 +45,7 @@ mopar:
 
 zwave:
   usb_path: /dev/ttyACM0
+  network_key: !secret zwave_network_key
   device_config: !include zwave_device_config.yaml
 
 http:
