--- a/automation/front_door.yaml
+++ b/automation/front_door.yaml
@@ -10,6 +10,7 @@
     service_template: "lock.lock"
     entity_id: lock.schlage_allegion_unknown_type_0001_id_0468_locked
 - alias: 'Front Door Unlocked'
+  trigger:
   action:
     service_template: "lock.unlock"
     entity_id: lock.schlage_allegion_unknown_type_0001_id_0468_locked
