Exclude Alexa media players

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -38,6 +38,14 @@ alexa_media:
     - email: !secret amazon_user
       password: !secret amazon_password
       url: amazon.com
+      exclude_devices:
+        - "This Device"
+        - "Kitchen"
+        - "Jeanie's Alexa Apps"
+        - "Loft"
+        - "Master Bedroom"
+        - "Michael's Alexa Apps"
+        - "Office"
 
 cover:
   - platform: myq
