--- a/automation/front_door.yaml
+++ b/automation/front_door.yaml
@@ -5,10 +5,12 @@
 - alias: 'Front Door Locked'
   trigger:
     - platform: time
-      at: '22:50:00'
+      at: '23:00:00'
   action:
     - service_template: "lock.lock"
       entity_id: lock.schlage_allegion_unknown_type_0001_id_0468_locked
+    - delay:
+        seconds: 5
     - service: media_player.alexa_tts
       data:
         entity_id: 
