--- a/automation/garage_door.yaml
+++ b/automation/garage_door.yaml
@@ -7,5 +7,12 @@
     - platform: time
       at: '21:00:00'
   action:
-    service_template: "cover.close_cover"
-    entity_id: cover.garage_door
+    - service_template: "cover.close_cover"
+      entity_id: cover.garage_door
+    - delay:
+        seconds: 5
+    - service: media_player.alexa_tts
+      data:
+        entity_id: 
+          - media_player.michael_s_echo
+        message: "The garage door has been closed." 
