Add Garage & Front Door Lock to lovelack

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -60,6 +60,46 @@ views:
             icon: mdi:coffee
             tap_action:
               action: toggle
+          - type: entity-button
+            entity: automation.front_door_locked
+            name: Front Door
+            icon: mdi:door
+            tap_action:
+              action: toggle
+          - type: entity-button
+            entity: lock.schlage_allegion_unknown_type_0001_id_0468_locked
+            name: Front Door
+            icon: mdi:door
+            tap_action:
+              action: call-service
+              service: lock.lock
+              service_data:
+                entity_id: lock.schlage_allegion_unknown_type_0001_id_0468_locked
+            hold_action:
+              action: call-service
+              service: lock.unlock
+              service_data:
+                entity_id: lock.schlage_allegion_unknown_type_0001_id_0468_locked
+          - type: entity-button
+            entity: automation.front_door_locked
+            name: Front Door
+            icon: mdi:door
+            tap_action:
+              action: toggle
+          - type: entity-button
+            entity: cover.garage_door
+            name: Garage Door
+            icon: mdi:garage
+            tap_action:
+              action: call-service
+              service: cover.open_cover
+              service_data:
+                entity_id: cover.garage_door
+            hold_action:
+              action: call-service
+              service: cover.close_cover
+              service_data:
+                entity_id: cover.garage_door
      
       - type: vertical-stack
         cards:
