--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -109,7 +109,7 @@ views:
             cards:
               - type: custom:mini-graph-card
                 entities:
-                  - climate.thermostat.current_temperature
+                  - climate.thermostat.attributes.current_temperature
                 name: Great Room
                 line_color: '#2980b9'
                 line_width: 6
