--- a/configuration.yaml
+++ b/configuration.yaml
@@ -92,6 +92,7 @@ weather:
     api_key: !secret darksky_api_key
     mode: daily
 
+notify: !include notify.yaml
 recorder: !include recorder.yaml
 logger: !include logger.yaml
 sensor: !include_dir_merge_list sensor
